formspree url toegevoegd

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -246,7 +246,7 @@
 
                 <div id="contact-message"></div>
 
-                <form  method="post" action="https://formspree.io/sample/of/endpoint">
+                <form  method="post" action="https://formspree.io/f/xgvqqrdn">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
