--- a/public/index.html
+++ b/public/index.html
@@ -461,8 +461,14 @@
 
         <div class="col-md-4 col-sm-6">
 
-            
+            <h4>Wettelijke info</h4>
 
+            <p>Vergunde onderneming voor 
+            <br>alarm- en camerasystemen
+        </p>
+
+
+            <hr class="hidden-md hidden-lg hidden-sm">
         </div>
         
 
