--- a/public/index.html
+++ b/public/index.html
@@ -461,11 +461,11 @@
 
         <div class="col-md-4 col-sm-6">
 
-            <h4>Wettelijke info</h4>
+            <h4>vergunning</h4>
 
-            <p>Vergunde onderneming voor 
-            <br>alarm- en camerasystemen
-        </p>
+        	<p>Vergunde onderneming voor alarmsystemen en camerasystemen<br>
+				volgens KBO 0786767097
+      		</p>
 
 
             <hr class="hidden-md hidden-lg hidden-sm">
