proberen favicon te fixen

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
 
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-<link rel="favicon.ico" href="/img/favicon.ico.png" />
+<link rel="favicon.ico" href="/img/favicon.ico" />
 
 
 <link href="/css/owl.carousel.css" rel="stylesheet">
