aanpassing vergunning in footer

--- a/public/index.html
+++ b/public/index.html
@@ -463,8 +463,8 @@
 
             <h4>vergunning</h4>
 
-        	<p>Vergunde onderneming voor alarmsystemen en camerasystemen<br>
-				volgens KBO 0786767097
+        	<p>Vergunde onderneming voor alarmsystemen 
+                en camerasystemen volgens KBO 0786767097<br>
       		</p>
 
 
